force-app/main/default/objects/LLC_BI__Participation__c/LLC_BI__Participation__c.object-meta.xml
<CustomObject>
    <description>The participation object allows us to accurately and easily track information regarding the companies we participate our loans with, and the information regarding that participation.</description>
    <label>Participation</label>
    <nameField>
        <displayFormat>PAR-{0000000000}</displayFormat>
        <label>Participation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>