force-app/main/default/objects/LLC_BI__Participation__c/fields/cm_Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>cm_Available_Amount__c</fullName>
    <description>Field is used to capture the current available amount of  the participation outstanding</description>
    <label>Available Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>