force-app/main/default/objects/LLC_BI__Participation__c/fields/Lead_Bank__c.field-meta.xml
<CustomField>
    <fullName>Lead_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Bank</label>
    <type>Checkbox</type>
</CustomField>