force-app/main/default/objects/LLC_BI__Participation__c/fields/LLC_BI__Invite_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Invite_Amount__c</fullName>
    <description>This optional field is used to capture the amount at which the participant was invited to participate in the loan.</description>
    <label>Invite Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>