force-app/main/default/objects/LLC_BI__Participation__c/fields/LLC_BI__Participant__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This optional field is a lookup to the relationship record for this participant.</description>
    <label>Participant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Participations</relationshipLabel>
    <relationshipName>Participations</relationshipName>
    <type>Lookup</type>
</CustomField>