force-app/main/default/objects/LLC_BI__Participation__c/fields/LLC_BI__Role__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Role__c</fullName>
    <description>This optional picklist field specifies the participant&apos;s role in the loan.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Agent</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Book Runner</fullName>
            </value>
            <value>
                <fullName>Co-Agent</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>