force-app/main/default/objects/LLC_BI__Participation__c/fields/LLC_BI__UNGTD_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__UNGTD_Amount__c</fullName>
    <description>This optional field is used to specify the unguaranteed amount of the participation.</description>
    <label>UNGTD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>