force-app/main/default/objects/LLC_BI__Participation__c/fields/LLC_BI__Voting_Percent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Voting_Percent__c</fullName>
    <description>This optional field is used to capture the percentage of voting rights for this participant.</description>
    <label>% Voting Rights</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>