force-app/main/default/objects/LLC_BI__Participation__c/fields/nMONITOR__Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Unique_Identifier__c</fullName>
    <description>The Administrators populate this optional text field to define a unique identifier for Participation records syncing from core. By default, it is blank.</description>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>